<resources>
    <string name="app_name">Projekt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Wszystkie produkty</string>
    <string name="menu_gallery">Ostatnio dodane</string>
    <string name="menu_slideshow">Kategorie</string>
    <string name="menu_shopping_list">Lista zakupów</string>
    <string name="menu_add_product">Dodaj produkt</string>
    <string name="menu_add_code">Dodaj okazję</string>
    <string name="shopping_list_name">Nazwij swoją listę zakupów</string>
    <string name="add_products">Dodaj produkty</string>
    <string name="new_shopping_list">Nowa lista zakupów</string>
    <string name="menu_promo_codes">Kody promocyjne</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code_brand">Marka</string>
    <string name="code">Kod</string>
    <string name="code_expires">Data ważności</string>
    <string name="code_description">Opis</string>
    <string name="code_website">Strona internetowa</string>
    <string name="list_detail_edit">Edytuj</string>
    <string name="link_detail">Link</string>
    <string name="register_question">Zarejestruj się</string>
    <string name="login_question">Masz już konto? Zaloguj się.</string>
    <string name="login">Zaloguj się</string>
    <string name="register">Zarejestruj się</string>
    <string name="email">Wpisz email</string>
    <string name="password">Wpisz hasło</string>
    <string name="confirm_password">Potwierdź hasło</string>
    <string name="username">Wpisz nazwę użytkownika</string>
    <string name="bar_code">Kod kreskowy</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="product_desc">Opis produktu</string>
    <string name="product_image">Zdjęcie produktu</string>
    <string name="product_link">Link produktu</string>
    <string name="product_id">Numer produktu</string>
    <string name="add_product">Dodaj produkt</string>
    <string name="photo">Zdjęcie</string>
    <string name="code_id">Numer okazji</string>
    <string name="add_code">Dodaj kod</string>
    <string name="signOut">Wyloguj się</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>