<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.project_ver1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.project_ver1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.project_ver1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="com.example.project_ver1.ui.shopping_list.ShoppingList"
        android:label="@string/menu_shopping_list"
        tools:layout="@layout/fragment_shopping_list" />
    <fragment
        android:id="@+id/nav_promo_codes"
        android:name="com.example.project_ver1.ui.promo_codes.PromoCodesFragment"
        android:label="@string/menu_promo_codes"
        tools:layout="@layout/fragment_promo_codes" />

    <fragment
        android:id="@+id/nav_all_products"
        android:name="com.example.project_ver1.ui.all_products.AllProductsFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_all_products" />

    <fragment
        android:id="@+id/nav_add_product"
        android:name="com.example.project_ver1.ui.insert_to_database.InsertToDatabaseFragment"
        android:label="@string/menu_add_product"
        tools:layout="@layout/fragment_insert_to_database" />
</navigation>