<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_products"
            android:icon="@drawable/shopping_basket"
            android:title="@string/menu_home" />
<!--        <item-->
<!--            android:id="@+id/nav_home"-->

<!--            android:title="@string/menu_home" />-->
<!--        <item-->
<!--            android:id="@+id/nav_gallery"-->
<!--            android:icon="@drawable/ic_menu_gallery"-->
<!--            android:title="@string/menu_gallery" />-->
<!--        <item-->
<!--            android:id="@+id/nav_slideshow"-->
<!--            android:icon="@drawable/ic_menu_slideshow"-->
<!--            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/fact_check"
            android:title="@string/menu_shopping_list"/>
        <item
            android:id="@+id/nav_promo_codes"
            android:icon="@drawable/qr_code"
            android:title="@string/menu_promo_codes"/>
        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/inventory"
            android:title="@string/menu_add_product"/>
    </group>
</menu>